@@ -3,18 +3,19 @@ package hbnu.project.zhiyancommonencrypt.interceptor;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.convert.Convert;
 import cn.hutool.core.util.ObjectUtil;
+import hbnu.project.zhiyancommonbasic.utils.StringUtils;
+import hbnu.project.zhiyancommonencrypt.annotation.EncryptField;
+import hbnu.project.zhiyancommonencrypt.core.EncryptContext;
+import hbnu.project.zhiyancommonencrypt.core.EncryptorManager;
+import hbnu.project.zhiyancommonencrypt.enumd.AlgorithmType;
+import hbnu.project.zhiyancommonencrypt.enumd.EncodeType;
+import hbnu.project.zhiyancommonencrypt.properties.EncryptorProperties;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.ibatis.executor.parameter.ParameterHandler;
 import org.apache.ibatis.executor.resultset.ResultSetHandler;
 import org.apache.ibatis.plugin.*;
-import org.dromara.common.core.utils.StringUtils;
-import org.dromara.common.encrypt.annotation.EncryptField;
-import org.dromara.common.encrypt.core.EncryptContext;
-import org.dromara.common.encrypt.core.EncryptorManager;
-import org.dromara.common.encrypt.enumd.AlgorithmType;
-import org.dromara.common.encrypt.enumd.EncodeType;
-import org.dromara.common.encrypt.properties.EncryptorProperties;
+
 
 import java.lang.reflect.Field;
 import java.sql.Statement;
@@ -78,7 +79,7 @@ public class MybatisDecryptInterceptor implements Interceptor {
                 return;
             }
             // 判断第一个元素是否含有注解。如果没有直接返回，提高效率
-            Object firstItem = list.get(0);
+            Object firstItem = list.getFirst();
             if (ObjectUtil.isNull(firstItem) || CollUtil.isEmpty(encryptorManager.getFieldCache(firstItem.getClass()))) {
                 return;
             }
